[FIX] Select to deselect toggle was broken on Firefox

--- a/public/styles/blast-visualization.css
+++ b/public/styles/blast-visualization.css
@@ -514,7 +514,7 @@ table.dataTable.no-footer{
 }
 
 #extraWide {
-    width: 5.5em;
+    width: 5.7em;
     margin-right: 0.9em !important;
     margin-left: 1em;
     height: 1.7em;
